<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true"
android:textAlignment="center">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background2"
    tools:context=".RaeedMainActivity">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="412dp"
        android:layout_height="74dp"
        android:background="#4B4C52"
        android:backgroundTint="#4B4C52"
        android:text="@string/excercise_plans"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="406dp"
        android:layout_height="141dp"
        android:layout_marginTop="529dp"
        android:background="#4B4C52"
        android:text="@string/ex_plan3"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="408dp"
        android:layout_height="154dp"
        android:background="#4B4C52"
        android:fontFamily="@font/roboto"
        android:text="@string/ex_plan2"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="408dp"
        android:layout_height="138dp"
        android:background="#4B4C52"
        android:fontFamily="@font/roboto"
        android:text="@string/ex_plan1"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361" />

    <Button
        android:id="@+id/btnA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_viewplan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/btnB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_viewplan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="46dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.833"
        app:srcCompat="@drawable/heart" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_viewplan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="411dp"
        android:layout_height="134dp"
        android:layout_marginTop="28dp"
        android:background="#4B4C52"
        android:text="@string/ex_plan4"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/EditsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit workouts"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="@+id/txtTitle"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="226dp"
        android:layout_height="155dp"
        android:layout_gravity="top"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/workoutshome2" />

    <TextView
        android:id="@+id/txtExcerciseTitle"
        android:layout_width="186dp"
        android:layout_height="155dp"
        android:layout_gravity="top"
        android:background="#4B4C52"
        android:fontFamily="@font/lobster"
        android:text="@string/title"
        android:textColor="#009B85"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="52dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="@+id/txtTitle"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toTopOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.655"
        app:srcCompat="@drawable/file" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="59dp"
        android:layout_height="68dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/strength" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="52dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/runner" />

    <Button
        android:id="@+id/btnD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Plan"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.813" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="71dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.753"
        app:srcCompat="@drawable/abs" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
